[package]
name = "sopho"
version = "0.1.0"
authors = ["Cyryl Płotnicki <cyplo@cyplo.net>"]
edition = "2018"

[dependencies]
async-std = "1.5"
anyhow = "1.0"
chrono = "0.4"
dashmap = "3.8"
futures = "0.3"
kamadak-exif = "0.5"
lazy_static = "1.4"
rayon = "1.3"
regex = "1.3"
structopt = "0.3"
walkdir = "2.3"